Changes to table in manage.html
Changes to the functions of the table in manage.html

- Rows are colored red if there are missing grades.
- Exportable as pdf now
- Exports the entire table now
- Added a dictionary to convert grades to alphanum
- Hide unnecessary fields

--- a/cs28_project/templates/manage.html
+++ b/cs28_project/templates/manage.html
@@ -37,6 +37,11 @@
         background-color: #fefefe;
     }
 
+    .text-area {
+        width: 100px;
+        height: 50px;
+    }
+
 </style>
 
 <!-- jump to page -->
@@ -112,9 +117,11 @@ Manage
     - adding data-search-highlight="true" breaks editable fields.
     - data-reorderable-columns="true" breaks table-->
     <table id="table"
-           class="table"
+           class="table table-bordered"
+           data-search-accent-neutralise="true"
 
            data-unique-id="id"
+           data-row-style="rowStyle"
 
            data-height="650"
            data-key-events="true"
@@ -144,15 +151,16 @@ Manage
            data-detail-view="true">
         <thead>
             <tr>
-                <th data-field="id" data-sortable="true">Matric No.</th>
+                <th data-field="id" data-sortable="true" data-width="100">Matric No.</th>
                 <th data-field="first" data-sortable="true">First Name</th>
                 <th data-field="last" data-sortable="true">Last Name</th>
-                <th data-field="gpa4" data-sortable="true">GPA (4 d.p.)</th>
-                <th data-field="gpa3" data-sortable="true">GPA (3 d.p.)</th>
-                <th data-field="gpa2" data-sortable="true">GPA (2 d.p.)</th>
+                <th data-field="gpa4" data-sortable="true" data-visible="false">GPA (4 d.p.)</th>
+                <th data-field="gpa3" data-sortable="true" data-visible="false">GPA (3 d.p.)</th>
+                <th data-field="gpa2" data-sortable="true" data-visible="false">GPA (2 d.p.)</th>
                 <th data-field="gpa1" data-sortable="true">GPA (1 d.p.)</th>
-                <th data-field="award" data-sortable="true" data-editable="true">Award</th>
+                <th data-field="award" data-sortable="true">Award</th>
                 <th data-field="notes" data-sortable="true" data-editable="true">Notes</th>
+                <th data-field="missingGrades" data-visible="false">Is Missing Grade</th>
             </tr>
         </thead>
     </table>
@@ -162,6 +170,21 @@ Manage
 {% block scripts %}
 <script>
     var $table = $('#table');
+
+    var grades_dict = {"A1": 22, "A2": 21,
+                       "A3": 20, "A4": 19,
+                       "A5": 18, "B1": 17,
+                       "B2": 16, "B3": 15,
+                       "C1": 14, "C2": 13,
+                       "C3": 12, "D1": 11,
+                       "D2": 10, "D3": 9,
+                       "E1": 8, "E2": 7,
+                       "E3": 6, "F1": 5,
+                       "F2": 4, "F3": 3,
+                       "G1": 2, "G2": 1,
+                       "H": 0, "CW": 0,
+                       "CR": 0, "MV": 0
+                       }
 
     // populate an array with json for each student
     var mydata = [
@@ -176,13 +199,14 @@ Manage
                 "gpa1": "{{ model.finalAward1 }}",
                 "award": "{{ model.foobar }}",
                 "notes": "{{ model.notes }}",
+                "missingGrades": "{{ model.isMissingGrades }}",
                 "sub": [
                     {% with model.grade_set.all as grades %}
                         {% for grade in grades %}
                             {
                                 "code": "{{ grade.courseCode }}",
                                 "alpha": "{{ grade.alphanum }}",
-                                "ttpt": "{{ SpamEggs }}"
+                                "ttpt": grades_dict["{{ grade.alphanum }}"]
                             }{% if not forloop.last %}, {% endif %}
                         {% endfor %}
                     {% endwith %}
@@ -192,13 +216,16 @@ Manage
         {% endfor %}
     ];
 
+    // bootstrap table attributes
     $(function () {
         $('#table').bootstrapTable({
+            exportTypes: ['json', 'xml', 'csv', 'txt', 'excel', 'pdf'],
             sortReset: true,
             sortStable: true,
             theadClasses: "thead-light",
             visibleSearch: true,
             data: mydata,
+            exportDataType: "all",
             // subtable
             onExpandRow: function (index, row, $detail) {
                 var $el = $detail.html('<table></table>').find('table')
@@ -206,13 +233,89 @@ Manage
                     {
                         field: "code",
                         title: "Course Code",
-                        sortable: true
+                        sortable: true,
                     },
                     {
                         field: "alpha",
                         title: "Alphanumeric Grade",
                         sortable: true,
-                        editable: true
+                        editable: {
+                            type: 'select',
+                            // mode: 'inline',
+                            source: [
+                                {
+                                    text: "A",
+                                    children: [
+                                        {value: "A1", text: "A1"},
+                                        {value: "A2", text: "A2"},
+                                        {value: "A3", text: "A3"},
+                                        {value: "A4", text: "A4"},
+                                        {value: "A5", text: "A4"},
+                                    ]
+                                },
+                                {
+                                    text: "B",
+                                    children: [
+                                        {value: "B1", text: "B1"},
+                                        {value: "B2", text: "B2"},
+                                        {value: "B3", text: "B3"}
+                                    ]
+                                },
+                                {
+                                    text: "C",
+                                    children: [
+                                        {value: "C1", text: "C1"},
+                                        {value: "C2", text: "C2"},
+                                        {value: "C3", text: "C3"}
+                                    ]
+                                },
+                                {
+                                    text: "D",
+                                    children: [
+                                        {value: "D1", text: "D1"},
+                                        {value: "D2", text: "D2"},
+                                        {value: "D3", text: "D3"}
+                                    ]
+                                },
+                                {
+                                    text: "E",
+                                    children: [
+                                        {value: "E1", text: "E1"},
+                                        {value: "E2", text: "E2"},
+                                        {value: "E3", text: "E3"}
+                                    ]
+                                },
+                                {
+                                    text: "F",
+                                    children: [
+                                        {value: "F1", text: "F1"},
+                                        {value: "F2", text: "F2"},
+                                        {value: "F3", text: "F3"}
+                                    ]
+                                },
+                                {
+                                    text: "G",
+                                    children: [
+                                        {value: "G1", text: "G1"},
+                                        {value: "G2", text: "G2"}
+                                    ]
+                                },
+                                {
+                                    text: "H",
+                                    children: [
+                                        {value: "H", text: "H"},
+                                    ]
+                                },
+                                {
+                                    text: "Special Codes",
+                                    children: [
+                                        {value: "CW", text: "CW"},
+                                        {value: "CR", text: "CR"},
+                                        {value: "MV", text: "MV"}
+                                    ]
+                                }
+                            ]
+                        }
                     },
                     {
                         field: "ttpt",
@@ -221,6 +324,7 @@ Manage
                     },
                 ]
                 $el.bootstrapTable({
+                    rowStyle: 'rowStyle',
                     columns: columns,
                     data: row.sub,
                 })
@@ -228,9 +332,31 @@ Manage
         });
     });
     // $(document).ready( function() { 
-
     //     $.fn.editable.defaults.mode = 'inline';
     // });
+
+    // to highlight rows in the future
+    function rowStyle(row, index) {
+        console.log(row.notes);
+        if (row.notes === 'Ut enim ad minim veniam') {
+            return {
+                classes: 'table-success'
+            }
+        }
+        if (row.missingGrades === "True") {
+            return {
+                classes: 'table-danger'
+            }
+        }
+        if (row.ttpt === 2) {
+            return {
+                classes: 'table-danger'
+            }
+        }
+        return 0
+    }
+
+    // ajax post to update database
     $('#table').on('editable-save.bs.table', function(e, field, row, oldValue, $el){
         console.log(e);
         console.log(field);
@@ -240,6 +366,11 @@ Manage
         // ajax post call to update db
     });
 </script>
+
+<!-- pdf export -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js" integrity="sha512-ToRWKKOvhBSS8EtqSflysM/S7v9bB9V0X3B1+E7xo7XZBEZCPL3VX5SFIp8zxY19r7Sz0svqQVbAOx+QcLQSAQ==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.0.14/jspdf.plugin.autotable.js" integrity="sha512-9xVpHMGorTPbSEFD6+ex0dKDYKxvciATI70tPCHCGxTkBD3HXboXLTnnpMwgdxms9uOwocFZdUx4AFl4p0FHag==" crossorigin="anonymous"></script>
+
 <!-- keystrokes -->
 <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/key-events/bootstrap-table-key-events.min.js"></script>
 
