--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -268,6 +268,7 @@
                 theme: "minimal"
             });
 
+            // Pushes body content aside. Will be reimplemented in the future
             // $('#collapseSidebar').on('click', function () {
             //     $('#sidebar').toggleClass('active');
             //     $('#bodyBlock').toggleClass('active');
